--- a/catch/2018-gw-2/01.html
+++ b/catch/2018-gw-2/01.html
@@ -47,7 +47,7 @@ document.write(fc2footertag);
 </body>
 </html><!--
      FILE ARCHIVED ON 09:55:06 May 08, 2020 AND RETRIEVED FROM THE
-     INTERNET ARCHIVE ON 09:02:40 Oct 14, 2025.
+     INTERNET ARCHIVE ON 05:39:03 Oct 15, 2025.
      JAVASCRIPT APPENDED BY WAYBACK MACHINE, COPYRIGHT INTERNET ARCHIVE.
 
      ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
@@ -55,13 +55,13 @@ document.write(fc2footertag);
 -->
 <!--
 playback timings (ms):
-  captures_list: 0.535
-  exclusion.robots: 0.027
-  exclusion.robots.policy: 0.017
-  esindex: 0.01
-  cdx.remote: 119.327
-  LoadShardBlock: 378.177 (3)
-  PetaboxLoader3.datanode: 351.172 (4)
-  PetaboxLoader3.resolve: 260.613 (2)
-  load_resource: 292.949
+  captures_list: 1.833
+  exclusion.robots: 0.048
+  exclusion.robots.policy: 0.026
+  esindex: 0.018
+  cdx.remote: 146.821
+  LoadShardBlock: 93.686 (3)
+  PetaboxLoader3.datanode: 111.253 (4)
+  load_resource: 91.455
+  PetaboxLoader3.resolve: 70.852
 -->
