--- a/catch/2018-gw-2/index2.html
+++ b/catch/2018-gw-2/index2.html
@@ -77,7 +77,7 @@ document.write(fc2footertag);
 <!-- FC2, inc.-->
 </body></html><!--
      FILE ARCHIVED ON 09:31:52 Mar 30, 2020 AND RETRIEVED FROM THE
-     INTERNET ARCHIVE ON 09:02:35 Oct 14, 2025.
+     INTERNET ARCHIVE ON 05:38:59 Oct 15, 2025.
      JAVASCRIPT APPENDED BY WAYBACK MACHINE, COPYRIGHT INTERNET ARCHIVE.
 
      ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
@@ -85,13 +85,13 @@ document.write(fc2footertag);
 -->
 <!--
 playback timings (ms):
-  captures_list: 0.587
-  exclusion.robots: 0.031
-  exclusion.robots.policy: 0.018
-  esindex: 0.011
-  cdx.remote: 29.437
-  LoadShardBlock: 139.311 (3)
-  PetaboxLoader3.datanode: 155.921 (4)
-  load_resource: 235.761
-  PetaboxLoader3.resolve: 136.329
+  captures_list: 0.737
+  exclusion.robots: 0.034
+  exclusion.robots.policy: 0.021
+  esindex: 0.012
+  cdx.remote: 8.986
+  LoadShardBlock: 50.946 (3)
+  PetaboxLoader3.datanode: 112.657 (4)
+  PetaboxLoader3.resolve: 79.304 (2)
+  load_resource: 144.164
 -->
