--- a/catch/2018-gw/entry29.html
+++ b/catch/2018-gw/entry29.html
@@ -42,7 +42,7 @@ document.write(fc2footertag);
 </body>
 </html><!--
      FILE ARCHIVED ON 20:28:45 Mar 06, 2023 AND RETRIEVED FROM THE
-     INTERNET ARCHIVE ON 08:11:01 Oct 14, 2025.
+     INTERNET ARCHIVE ON 08:00:59 Oct 15, 2025.
      JAVASCRIPT APPENDED BY WAYBACK MACHINE, COPYRIGHT INTERNET ARCHIVE.
 
      ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
@@ -50,14 +50,14 @@ document.write(fc2footertag);
 -->
 <!--
 playback timings (ms):
-  captures_list: 0.643
-  exclusion.robots: 0.033
-  exclusion.robots.policy: 0.022
-  esindex: 0.011
-  cdx.remote: 55.534
-  LoadShardBlock: 266.213 (3)
-  PetaboxLoader3.datanode: 624.71 (5)
-  load_resource: 637.488
-  PetaboxLoader3.resolve: 147.899
-  loaddict: 274.756
+  captures_list: 0.843
+  exclusion.robots: 0.047
+  exclusion.robots.policy: 0.025
+  esindex: 0.018
+  cdx.remote: 513.725
+  LoadShardBlock: 633.362 (3)
+  PetaboxLoader3.datanode: 641.817 (5)
+  PetaboxLoader3.resolve: 334.804 (2)
+  load_resource: 665.425
+  loaddict: 354.442
 -->
